--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,102 @@
-# Node
+# Dependencies
 node_modules/
+.pnp
+.pnp.js
+
+# Testing
+/coverage/
+.nyc_output/
+
+# Production
+/build/
+/dist/
+/public/build/
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.staging.local
+.env.production.local
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-dist/
-.build/
-.cache/
-astro-out/
 
-
-# TypeScript
-*.tsbuildinfo
-
-# Env files
-.env
-.env.*
-
-# Sistema
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
 .DS_Store
 Thumbs.db
 
-# IDEs
-.vscode/
+# TypeScript
+*.tsbuildinfo
+*.js.map
+
+# Local development
+.local/
+.cache/
+
+# Build cache
+.cache/
+.next/
+.vite/
+
+# Coverage
+coverage/
+
+# System
+.DS_Store
+Thumbs.db
+
+# Editor
+*.swp
+*.swo
+
+# Database
+*.sqlite
+*.db
+*.sqlitedb
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# IDE workspace
+.project
+.classpath
+.settings/
+
+# Cache
+.cache/
+
+# Debug
+*.log
+*.debug
+*.dump
+
+# Editor
+.editorconfig
+
+# Local development
+.env.local
+.env.development.local
+.env.test.local
+.env.staging.local
+.env.production.local
+
+# Generated files
+.astro/
+
+# macOS-specific files
+.DS_Store
+
+# jetbrains setting folder
 .idea/
-*.code-workspace
